Welcome to the Kaguya ChangeLog.


Changelog:

Version 1.24

- $repauthor no longer embeds with a red color on a successful use. (It's now pink)
- 

Version 1.23

- $antiraid command added. Features an interactive setup for a very powerful anti-raid service.
- $antiraidoff command added.
- $massban command largely improved. Now, instead of breaking the ban cycle when it runs into an error, it will continue.
    - Errors include things like deleted accounts or if Kaguya's role is not at the top of the hierarchy.
    - Made the same types of improvements to $masskick
- Users may no longer earn EXP in blacklisted servers.
- Massblacklist no longer requires the bot owner to also have administrator when using it.
- Totally fixed $massblacklist. Now takes in a list of IDs instead of a list of guild users.
    - This means blacklists don't have to be of people that are in the same server you execute the command from.
- Unused $antiraid (owner only) command removed.
- If the music player has finished playing, with no more songs in the queue, it will now automatically disconnect. (Same for music errors.)
- $autoassign [aa] command added.
- $autoassignremove [aar] command added.
- $autoassignclear [aac] command added.
- $autoassignview [aav] command added.
- Improved music service exception message. It's now less generic/vague.
- Fixed a bug with the music player where Kaguya could not play copyrighted songs.
- $serverblacklist [sbl] owner only command added.
- $serverunblacklist [subl] owner only command added.
- $massblacklist renamed to $userblacklist
    - Alias added: $ubl
- $reloadconfig has been tested and works! This allows for file modification without the need to restart the bot.
- Completely removed all NSFW tags except for $n, $n bomb, and $n gif.
    - I will focus on improving these for now. It is simply way too time consuming to manually create tags for thousands of images.
    - They have been removed from the command list.