@@ -6,7 +6,9 @@ Changelog:
 Version 1.24
 
 - $repauthor no longer embeds with a red color on a successful use. (It's now pink)
-- 
+- Custom command prefixes are no longer case sensitive.
+- When a user successfully redeems a supporter tag, they are now DM'd and Stage is sent a notification through DM as well.
+- When a new game of tic tac toe is started, the blank play area is now shown.
 
 Version 1.23
 
